=head1 NAME

Bric::Changes - Bricolage Changes

=head1 DATE

$LastChangedDate$

=head1 DESCRIPTION

This document lists the Changes to Bricolage introduced with each release.

=head1 VERSION 1.10.8 ()

=head2 Improvements

=head2 Bug Fixes

=over

=item *

Fixed a compatibility issue in Bric::Dist::Action::DTDValidate. Apparently
C<get_last_error()> was removed from L<XML::LibXML|XML::LibXML> 1.59 "for
thread-saftey reasons." This change backward-compatible with older versions of
XML::LibXML. [David]

=item *

Fixed a bug where a story published but with no resources (files) could cause
an error. Reported by Paul Hyland. [David]

=item *

Fixed a bug where assets could not be checked in and their version numbers
would revert to older ones (Bug #93). [Greg Heo & David]

=item *

Passing a false value for the C<published_version> parameter to the C<list()>
method of
L<Bric::Biz::Asset::Business::Story|Bric::Biz::Asset::Business::Story>,
L<Bric::Biz::Asset::Business::Media|Bric::Biz::Asset::Business::Media>, and
L<Bric::Biz::Asset::Template|Bric::Biz::Asset::Template> now works as
expected, returning the latest version of all stories regardless of their
publish status, rather than no stories at all (Bug #1). [David]

=back

=head1 VERSION 1.10.7 (2009-03-12)

=head2 Improvements

=over

=item *

The "Save, Save and Stay, and Return" buttons in the Edit Categories screen
of the story profile are moved to the right to better align with the interface
buttons. [Matt Rolf]

=item *

Improved documentation of the C<FTP_UNLINK_BEFORE_MOVE> F<bricolage.conf>
directive with specific reference to SFTP versions. [Alex Krohn]

=item *

Events are now logged using wallclock time rather than transaction start time,
so that multiple events logged in a single transaction can be displayed in the
order they were created, rather than in an arbitrary order. [David]

=item *

C<< Bric::Util::Burner->publish_another >> will now throw an exception if the