@@ -845,6 +845,7 @@ The XSD source:
                      <xs:element name="multiple" type="xs:boolean" minOccurs="0"/>
                      <xs:element name="max_size" type="xs:int" minOccurs="0"/>
                      <xs:element name="widget_type" type="xs:string"/>
+                     <xs:element name="sql_type" type="xs:string"/>
                      <xs:element name="default_val" type="xs:string"/>
                      <xs:element name="options" type="xs:string" minOccurs="0"/>
                      <xs:element name="length" type="xs:int" minOccurs="0"/>
