@@ -14,6 +14,17 @@ This document lists the Changes to Bricolage introduced with each release.
 
 =head2 Improvements
 
+=over
+
+=item *
+
+Added the C<sql_type> element to the export of field types from SOAP. This
+prevents the SOAP server from having to guess the SQL type of a field type
+when updating an element type. Thanks to David Oliveira for the report (Bug
+#79). [David]
+
+=back
+
 =head2 Bug Fixes
 
 =over
